force-app/main/default/objects/Auction__c/Auction__c.object-meta.xml
<CustomObject>
    <label>Auction</label>
    <nameField>
        <displayFormat>AUCT-{0}</displayFormat>
        <label>Auction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>