force-app/main/default/objects/Auction__c/fields/Auction_Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Auction_Final_Price__c</fullName>
    <label>Auction Final Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>