force-app/main/default/objects/Auction__c/fields/Auction_Start_Price__c.field-meta.xml
<CustomField>
    <fullName>Auction_Start_Price__c</fullName>
    <label>Auction Start Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>