force-app/main/default/objects/Auction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Auction_Date__c</columns>
    <columns>Auction_Start_Price__c</columns>
    <columns>Auction_Final_Price__c</columns>
    <columns>Has_Sold__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>